# fastapi-clean-deps

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: deps.py
app/api/v1/items/: router.py
app/core/: container.py
app/repositories/: in_memory.py  protocol.py
app/schemas/: items.py
app/services/: items.py
tests/: conftest.py  test_healthcheck.py  test_items_api.py
